# terminal-gfx-cpp

./: CMakeLists.txt  README.md  box2.h  color3.h  curspp-draw.cpp  curspp-draw.h  curspp-raster.cpp  curspp-raster.h  curspp.cpp  curspp.h  demo.cpp  ellipse-2D.cpp  ellipse-2D.h  ellipse2D.cpp  gfx-context-2D.cpp  gfx-context-2D.h  gfx-context.cpp  gfx-context.h  gfx-primitive-2D.cpp  gfx-primitive-2D.h  gfx-primitive-store-2D.cpp  gfx-primitive-store-2D.h  gfx-primitive-store_2D.cpp  gfx-primitive-store_2D.h  gfx-rasterize.cpp  gfx-rasterize.h  gfx-render-2D.cpp  gfx-render-2D.h  gfx-utils-rasterize.cpp  gfx-utils-rasterize.h  gfx-utils-transform.cpp  gfx-utils-transform.h  matrix.h  pixel-tree.h  polyline-2D.cpp  polyline-2D.h  test.cpp  vec2.h
demos/: CMakeLists.txt  gfx-demo.h
demos/common/: CMakeLists.txt  gfx-demo.h
demos/common/animations/: CMakeLists.txt  polyline-demo.cpp  polyline-demo.h  snake-demo.cpp  snake-demo.h  star-demo.cpp  star-demo.h
demos/common/interactive/: CMakeLists.txt  interactive-demo.cpp  interactive-demo.h
demos/curses/: CMakeLists.txt  curses-utils.h
demos/curses/animations/: CMakeLists.txt  curses-animations-demo.cpp
demos/curses/cycle/: polylines.cpp
demos/curses/interactive/: CMakeLists.txt  curses-interactive-demo.cpp  main.cpp
inc/demos/common/animations/boids/: boids-demo.h
inc/demos/common/animations/fireworks/: firework.h  fireworks-demo.h  particle.h
inc/demos/common/animations/fractal/: fractal-demo.h  fractal.h  julia.h  mandelbrot.h
inc/demos/common/animations/physics/: physics-demo.h
inc/demos/common/animations/snake/: snake-demo.h
inc/demos/common/animations/space/: body.h  camera.h  constants.h  physics.h  planet.h  simulations.h  space-demo.h  units.h
inc/demos/common/animations/star/: star-demo.h
inc/demos/common/animations/text/: text-demo.h
inc/demos/common/core/: demo-player.h  demo-utils.h  gfx-demo.h
inc/demos/common/interactive/: interactive-demo.h
inc/demos/curses/: curses-demo-player.h  curses-utils.h
inc/demos/glfw/: glfw-demo-player.h
inc/gfx/core/: gfx-primitive-2D.h  gfx-primitive-store-2D.h  gfx-render-2D.h  primitive-2D.h  render-2D.h  render-surface.h  scene-graph-2D.h  shader-2D.h
inc/gfx/core/draw/: pixel-tree.h
inc/gfx/core/types/: bitmap.h  color3.h  color4.h  obb-2D.h  pixel.h
inc/gfx/fonts/: font-manager-ttf.h  font-manager.h  font-ttf.h  font.h
inc/gfx/geometry/: flatten.h  rasterize.h  triangle.h  triangulate.h
inc/gfx/math/: box2.h  matrix.h  obb-2D.h  obb2.h  triangle-2D.h  vec2.h
inc/gfx/primitives/: bitmap-2D.h  circle-2D.h  ellipse-2D.h  polygon-2D.h  polyline-2D.h  text-2D.h
inc/gfx/surfaces/: curses-render-surface.h
inc/gfx/surfaces/curses/: curses-render-surface.h
inc/gfx/surfaces/glfw/: glad.h  glfw-render-surface.h
inc/gfx/text/: font-manager-ttf.h  font-manager.h  font-ttf.h  font.h
inc/gfx/utils/: rasterize.h  transform.h  triangulate.h  uuid.h
include/gfx/core/: gfx-context-2D.h  gfx-render-2D.h
include/gfx/math/: box2.h  matrix.h
include/gfx/primitives/: ellipse-2D.h  polyline-2D.h
include/gfx/utils/: rasterize.h
src/: CMakeLists.txt
src/demos/: CMakeLists.txt
src/demos/common/: CMakeLists.txt
src/demos/common/animations/: CMakeLists.txt
src/demos/common/animations/boids/: CMakeLists.txt  boids-demo.cpp
src/demos/common/animations/fireworks/: CMakeLists.txt  firework.cpp  fireworks-demo.cpp  particle.cpp
src/demos/common/animations/fractal/: CMakeLists.txt  fractal-demo.cpp
src/demos/common/animations/physics/: CMakeLists.txt  physics-demo.cpp
src/demos/common/animations/snake/: CMakeLists.txt  snake-demo.cpp
src/demos/common/animations/space/: CMakeLists.txt  body.cpp  camera.cpp  planet.cpp  simulations.cpp  space-demo.cpp
src/demos/common/animations/star/: CMakeLists.txt  star-demo.cpp
src/demos/common/animations/text/: CMakeLists.txt  text-demo.cpp
src/demos/common/core/: CMakeLists.txt  demo-player.cpp
src/demos/common/interactive/: interactive-demo.cpp
src/demos/curses/: CMakeLists.txt
src/demos/curses/animations/: CMakeLists.txt  main.cpp
src/demos/curses/interactive/: CMakeLists.txt  curses-interactive-demo.cpp
src/demos/glfw/: CMakeLists.txt
src/demos/glfw/animations/: CMakeLists.txt  main.cpp
src/gfx/: CMakeLists.txt
src/gfx/core/: CMakeLists.txt  gfx-context-2D.cpp  gfx-primitive-2D.cpp  gfx-primitive-store-2D.cpp  gfx-render-2D.cpp  primitive-2D.cpp  render-2D.cpp  render-surface.cpp  scene-graph-2D.cpp  shader-2D.cpp
src/gfx/fonts/: CMakeLists.txt  font-manager-ttf.cpp
src/gfx/geometry/: CMakeLists.txt  flatten.cpp  rasterize.cpp  triangulate.cpp
src/gfx/primitives/: CMakeLists.txt  bitmap-2D.cpp  circle-2D.cpp  ellipse-2D.cpp  polygon-2D.cpp  polyline-2D.cpp  text-2D.cpp
src/gfx/shaders/: CMakeLists.txt
src/gfx/surfaces/: CMakeLists.txt  curses-render-surface.cpp
src/gfx/surfaces/curses/: CMakeLists.txt  curses-render-surface.cpp
src/gfx/surfaces/glfw/: CMakeLists.txt  glad.c  glfw-render-surface.cpp
src/gfx/text/: CMakeLists.txt  font-manager-ttf.cpp
src/gfx/utils/: CMakeLists.txt  rasterize.cpp  transform.cpp  triangulate.cpp
